log
Thu Mar 17 12:25:11 HSP 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
16b56d9
Thu Mar 17 12:26:43 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
fb2683d
Thu Mar 17 12:39:27 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     sgte=list->current->next;
         ^
list.c:49:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return sgte;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4603ae9
Thu Mar 17 12:40:06 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     *sgte=list->current->next;
          ^
list.c:49:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return *sgte;
            ^~~~~
list.c:47:10: error: 'sgte' is used uninitialized in this function [-Werror=uninitialized]
     *sgte=list->current->next;
     ~~~~~^~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
040a285
Thu Mar 17 12:41:18 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
de5a2b6
Thu Mar 17 12:46:11 HSP 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4534b28
Thu Mar 17 12:51:24 HSP 2022: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
79c571c
Thu Mar 17 12:53:06 HSP 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:51:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     dato=list->current->next->data;
         ^
list.c:53:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return dato;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d906b40
Thu Mar 17 12:53:35 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c5b8a44
